--- a/.gitignore
+++ b/.gitignore
@@ -80,5 +80,38 @@ fabric.properties
 .idea/
 product.iml
 
-# Used by CanaDev as scratch or other local files
+### Gradle files to ignore
+### Reference: https://github.com/github/gitignore/blob/main/Gradle.gitignore
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+### Used by CanaDev as scratch or other local files
 *.cana
+
+# Include .jar files, as they will be necessary for delivery,
+# But class files are not relevant to end users.
+*.class
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
