Added product.jar by allowing the build directory to be included. Note, the jar name is not specified in the gitignore, and should probably be more descriptive.

--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@ product.iml
 ### Gradle files to ignore
 ### Reference: https://github.com/github/gitignore/blob/main/Gradle.gitignore
 .gradle
-**/build/
+#**/build/
 !src/**/build/
 
 # Ignore Gradle GUI config
