--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <!-- Taken from https://ant.apache.org/manual/tutorial-HelloWorldWithAnt.html -->
 
-<project name="ExampleInteract" basedir="." default="main">
+<project name="ExampleLoop" basedir="." default="main">
 
     <property name="src.dir"     value="src"/>
 
@@ -8,7 +8,7 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
 
-    <property name="main-class"  value="src.ExampleInteract"/>
+    <property name="main-class"  value="ExampleLoop"/>
 
     <!-- classpath>
         <pathelement path="lib"></pathelement>
